First Push personal website folder

--- a/bootcamp1/css/blog.css
+++ b/bootcamp1/css/blog.css
@@ -27,7 +27,7 @@ header{
   width: 275px;
   height: 100px;
   background-color: #00ff08;
-  float: right;
+  float: left;
   margin-top: 0px;
   font-size: 22px;
 
